--- a/src/mm-grid/mm-grid.scss
+++ b/src/mm-grid/mm-grid.scss
@@ -79,4 +79,5 @@
 
 #columnContainer {
 	@include displayFlex();
+	@include flex(1);
 }
